.error-hunt/all-errors.log

=== STAGE 1: Initial state with all files ===
TypeScript output:
archive/hooks/test-utilities/hook-error-scanner.ts(158,50): error TS1005: '}' expected.
archive/lib/styles/themes/activity-theme.ts(162,27): error TS1005: '>' expected.
archive/lib/styles/themes/activity-theme.ts(162,31): error TS1005: ';' expected.
archive/lib/styles/themes/activity-theme.ts(162,54): error TS1109: Expression expected.
archive/lib/styles/themes/activity-theme.ts(162,55): error TS1109: Expression expected.
archive/lib/styles/themes/activity-theme.ts(164,21): error TS1005: '>' expected.
archive/lib/styles/themes/activity-theme.ts(164,25): error TS1005: ';' expected.
archive/lib/styles/themes/activity-theme.ts(164,48): error TS1109: Expression expected.
archive/lib/styles/themes/activity-theme.ts(164,49): error TS1109: Expression expected.
archive/lib/styles/themes/activity-theme.ts(166,23): error TS1005: '>' expected.
archive/lib/styles/themes/activity-theme.ts(166,27): error TS1005: ';' expected.
archive/lib/styles/themes/activity-theme.ts(166,50): error TS1109: Expression expected.
archive/lib/styles/themes/activity-theme.ts(166,51): error TS1109: Expression expected.
archive/lib/styles/themes/activity-theme.ts(168,27): error TS1005: '>' expected.
archive/lib/styles/themes/activity-theme.ts(168,31): error TS1005: ';' expected.
archive/lib/styles/themes/activity-theme.ts(168,54): error TS1109: Expression expected.
archive/lib/styles/themes/activity-theme.ts(168,55): error TS1109: Expression expected.

Build output:

> bolt-expo-starter@1.0.0 build
> next build

   ▲ Next.js 15.3.5
   - Environments: .env.local, .env

   Creating an optimized production build ...
 ✓ Compiled successfully in 0ms
   Linting and checking validity of types ...
Failed to compile.

./app/(tabs)/teacher-home.tsx:12:9
Type error: Type '[string, Dispatch<SetStateAction<string>>]' must have a '[Symbol.iterator]()' method that returns an iterator.

[0m [90m 10 |[39m   [36mconst[39m { user[33m,[39m loading } [33m=[39m useAuth()[33m;[39m[0m
[0m [90m 11 |[39m   [36mconst[39m router [33m=[39m useRouter()[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 12 |[39m   [36mconst[39m [email[33m,[39m setEmail] [33m=[39m useState([32m'admin2@example.com'[39m)[33m;[39m[0m
[0m [90m    |[39m         [31m[1m^[22m[39m[0m
[0m [90m 13 |[39m   [36mconst[39m [password[33m,[39m setPassword] [33m=[39m useState([32m''[39m)[33m;[39m[0m
[0m [90m 14 |[39m   [36mconst[39m [isSigningIn[33m,[39m setIsSigningIn] [33m=[39m useState([36mfalse[39m)[33m;[39m[0m
[0m [90m 15 |[39m   [0m
Next.js build worker exited with code: 1 and signal: null

=== STAGE 2: After removing archived syntax errors ===
TypeScript output:
tsconfig.json(3,3): error TS5098: Option 'customConditions' can only be used when 'moduleResolution' is set to 'node16', 'nodenext', or 'bundler'.

Build output:

> bolt-expo-starter@1.0.0 build
> next build

   ▲ Next.js 15.3.5
   - Environments: .env.local, .env

   Creating an optimized production build ...
 ✓ Compiled successfully in 0ms
   Linting and checking validity of types ...
Failed to compile.

./app/(tabs)/teacher-home.tsx:12:9
Type error: Type '[string, Dispatch<SetStateAction<string>>]' must have a '[Symbol.iterator]()' method that returns an iterator.

[0m [90m 10 |[39m   [36mconst[39m { user[33m,[39m loading } [33m=[39m useAuth()[33m;[39m[0m
[0m [90m 11 |[39m   [36mconst[39m router [33m=[39m useRouter()[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 12 |[39m   [36mconst[39m [email[33m,[39m setEmail] [33m=[39m useState([32m'admin2@example.com'[39m)[33m;[39m[0m
[0m [90m    |[39m         [31m[1m^[22m[39m[0m
[0m [90m 13 |[39m   [36mconst[39m [password[33m,[39m setPassword] [33m=[39m useState([32m''[39m)[33m;[39m[0m
[0m [90m 14 |[39m   [36mconst[39m [isSigningIn[33m,[39m setIsSigningIn] [33m=[39m useState([36mfalse[39m)[33m;[39m[0m
[0m [90m 15 |[39m   [0m
Next.js build worker exited with code: 1 and signal: null

=== STAGE 3: After removing bulk-upload ===
TypeScript output:
tsconfig.json(3,3): error TS5098: Option 'customConditions' can only be used when 'moduleResolution' is set to 'node16', 'nodenext', or 'bundler'.

Build output:

> bolt-expo-starter@1.0.0 build
> next build

   ▲ Next.js 15.3.5
   - Environments: .env.local, .env

   Creating an optimized production build ...
 ✓ Compiled successfully in 0ms
   Linting and checking validity of types ...
Failed to compile.

./app/(tabs)/teacher-home.tsx:12:9
Type error: Type '[string, Dispatch<SetStateAction<string>>]' must have a '[Symbol.iterator]()' method that returns an iterator.

[0m [90m 10 |[39m   [36mconst[39m { user[33m,[39m loading } [33m=[39m useAuth()[33m;[39m[0m
[0m [90m 11 |[39m   [36mconst[39m router [33m=[39m useRouter()[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 12 |[39m   [36mconst[39m [email[33m,[39m setEmail] [33m=[39m useState([32m'admin2@example.com'[39m)[33m;[39m[0m
[0m [90m    |[39m         [31m[1m^[22m[39m[0m
[0m [90m 13 |[39m   [36mconst[39m [password[33m,[39m setPassword] [33m=[39m useState([32m''[39m)[33m;[39m[0m
[0m [90m 14 |[39m   [36mconst[39m [isSigningIn[33m,[39m setIsSigningIn] [33m=[39m useState([36mfalse[39m)[33m;[39m[0m
[0m [90m 15 |[39m   [0m
Next.js build worker exited with code: 1 and signal: null

=== STAGE 4: After removing teacher-home ===
TypeScript output:
tsconfig.json(3,3): error TS5098: Option 'customConditions' can only be used when 'moduleResolution' is set to 'node16', 'nodenext', or 'bundler'.

Build output:

> bolt-expo-starter@1.0.0 build
> next build

   ▲ Next.js 15.3.5
   - Environments: .env.local, .env

   Creating an optimized production build ...
 ✓ Compiled successfully in 0ms
   Linting and checking validity of types ...
Failed to compile.

./app/components/shared/attachment-field.tsx:45:9
Type error: Type '[boolean, Dispatch<SetStateAction<boolean>>]' must have a '[Symbol.iterator]()' method that returns an iterator.

[0m [90m 43 |[39m   disabled [33m=[39m [36mfalse[39m[0m
[0m [90m 44 |[39m }) [33m=>[39m {[0m
[0m[31m[1m>[22m[39m[90m 45 |[39m   [36mconst[39m [showLinkInput[33m,[39m setShowLinkInput] [33m=[39m useState([36mfalse[39m)[33m;[39m[0m
[0m [90m    |[39m         [31m[1m^[22m[39m[0m
[0m [90m 46 |[39m   [36mconst[39m [linkUrl[33m,[39m setLinkUrl] [33m=[39m useState([32m''[39m)[33m;[39m[0m
[0m [90m 47 |[39m   [36mconst[39m [linkName[33m,[39m setLinkName] [33m=[39m useState([32m''[39m)[33m;[39m[0m
[0m [90m 48 |[39m[0m
Next.js build worker exited with code: 1 and signal: null
